# DCSim

./: .gitignore  CITATION.cff  CMakeLists.txt  Dockerfile  Dockerfile.base  README.md  checkout.sh  run_benchmark.sh  run_debug_test.sh  run_validation_test.sh
.devcontainer/: devcontainer.json
.github/workflows/: github-docker.yaml
CMakeModules/: FindFSMod.cmake  FindSimGrid.cmake
Sketches_and_Ideas/: XrootD_notes.txt  monitoring.txt  streaming.txt
checkout_scripts/: checkout_with_sudo.sh  install_conda_environment.sh
data/dataset-configs/: crown_ttbar_copyjob.json  crown_ttbar_slowjob.json  crown_ttbar_testjob.json  prefetchScan.json  prefetchScanDatasets.json  sample.json  simScaling.json
data/platform-files/: ETPbatch.xml  ETPbatch_faster.xml  ETPbatch_reduced.xml  ETPbatch_reduced_full.xml  ETPbatch_reduced_scaled.xml  ETPbatch_reduced_simple.xml  ETPbatch_scaled.xml  ETPbatch_simple.xml  WLCG_disklessTier2.xml  WLCG_disklessTier2_FATPIPE.xml  WLCG_disklessTier2_reduced.xml  WLCG_disklessTier2_reduced100.xml  WLCG_disklessTier2_reduced1000.xml  WLCG_disklessTier2_reduced50.xml  cach_testing.xml  oneworker.xml  sgbatch.xml  sgbatch_nested.xml  sgbatch_scaletest.xml  sgbatch_validation.xml  sgbatch_validation_scaled.xml  sgbatch_validation_synthetic_fcfn.xml  sgbatch_validation_synthetic_fcsn.xml  sgbatch_validation_synthetic_scfn.xml  sgbatch_validation_synthetic_scsn.xml  sgbatch_validation_template.xml  sgbatch_weirdness.xml  twoworkers.xml
data/workflow-configs/: calc_workflow.json  copy_and_compute_workflow.json  crown_ttbar_validation.json  mc_workflow.json  stream_and_compute_workflow.json  workflow_testsuite.json
data/workload-configs/: Dummy_workloads.json  T1_DE_KIT_workloads.json  T2_DE_DESY_workloads.json  crown_ttbar_copyjob.json  crown_ttbar_copyjob_no_cpu.json  crown_ttbar_slowjob.json  crown_ttbar_testjob.json  crown_ttbar_validation.json  prefetchScanWorkloads.json  simScaling.json  workflow_testsuite.json
htcondor_etpbatch_scaling/: arguments.txt  measure_resource_consumption.jdl  measure_resource_consumption.sh
htcondor_test/: test_dcsim-env_remote.jdl  test_dcsim-env_remote.sh
htcondor_test_simscaling/: install_conda_environment.jdl  install_conda_environment.sh
sgbatch/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
sgbatch/data/platform-files/: host_scaletest.xml  hosts.xml
sgbatch/src/: CacheComputation.cpp  CacheComputation.h  CopyComputation.cpp  CopyComputation.h  JobSpecification.h  LRU_FileList.h  SimpleExecutionController.cpp  SimpleExecutionController.h  SimpleHTCondorJobScheduler.cpp  SimpleHTCondorJobScheduler.h  SimpleSimulator.cpp  SimpleSimulator.h  SimpleWMS.cpp  SimpleWMS.h  StreamedComputation.cpp  StreamedComputation.h
sgbatch/src/computation/: CacheComputation.cpp  CacheComputation.h  CopyComputation.cpp  StreamedComputation.cpp  StreamedComputation.h
src/: BandwidthModifier.cpp  BandwidthModifier.h  CacheComputeAction.cpp  CacheComputeAction.h  CalibrationPlatformCreator.cpp  CalibrationPlatformCreator.h  Dataset.cpp  Dataset.h  JobScheduler.cpp  JobScheduler.h  JobSpecification.h  LRU_FileList.h  MonitorAction.cpp  MonitorAction.h  SimpleExecutionController.cpp  SimpleExecutionController.h  SimpleSimulator.cpp  SimpleSimulator.h  Workload.cpp  Workload.h  WorkloadExecutionController.cpp  WorkloadExecutionController.h
src/computation/: CacheComputation.cpp  CacheComputation.h  CopyComputation.cpp  CopyComputation.h  StreamedComputation.cpp  StreamedComputation.h
src/util/: DefaultValues.h  Enums.h  Utils.h
tools/: boxplot_legend.py  checkout.sh  evaluate_synthetic.py  extendedIttertools.py  fixCopyJobs.py  generate_synthetic.py  gradientSearch.py  gridSearch.py  harvestVariationRuns.py  hitratePerformancePlots.py  hitrateScan.sh  hitrateScanScript.sh  hitrateperformance.py  hitratescan.sh  hitratescan_debug.sh  hyper_pram_test.py  jobperformance.py  massif_caching.sh  massif_wrench.sh  oneTest.py  output  platformFromVector.py  prefetchPerformancePlots.py  prefetchScan.sh  randomSearch.py  run_benchmark.sh  sampleCommand.sh  shell.py  simScaling.sh  simScalingPlots.py  simcal-calibrator.py  simcal-version.py  simcal_calibrator.py  simcal_run.py  simcal_shell.py  simscaling.py  simscaling.sh  singleHitrate.sh  sumarize_hep.py  sumarize_sim.py  (+1 more)
tools/htcondor/etbatch/: arguments.txt  measure_and_simulate.jdl
tools/htcondor/etpbatch/: measure_and_simulate.jdl  measure_and_simulate.jdl.bak  measure_and_simulate.sh
tools/htcondor/etpbatch_scaling/: measure_resource_consumption.jdl  measure_resource_consumption.sh
tools/htcondor/hitratescan/: hitratescan.jdl  simulate.sh  simulate_scaled.sh
tools/htcondor/test/: test_dcsim-env_remote.jdl  test_dcsim-env_remote.sh
tools/htcondor/validation_runs/: cloud-8.list  generate_submit.sh  run_shell_simulations.py  run_simulations.sh  run_simulations.sub  run_simulations.sub.template  sgbatch_validation_template_test.xml  sgbatch_validation_template_test.xml.tmp
tools/htcondor/wlcg_disklessTier2/: arguments.txt  measure_and_simulate.jdl  measure_and_simulate.sh  prefetch_scan.jdl  prefetch_scan.sh  run_simulations.jdl  run_simulations.sh  scaling.jdl  scaling.sh
workflow_examples/: calc_workflow.json  mc_workflow.json
